<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_albums">

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.netcode.songify.ui.main.albums.AlbumsFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/fragment_albums" />

    <fragment
        android:id="@+id/navigation_songs"
        android:name="com.netcode.songify.ui.main.songs.SongsFragment"
        android:label="@string/title_songs"
        tools:layout="@layout/fragment_songs" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.netcode.songify.ui.main.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>