<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.albums.detail.AlbumDetailActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/album_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/song_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/default_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_art"
                android:scaleType="fitXY"
                android:transitionName="@string/tn_album_art"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/album_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="Title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_art"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/album_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="0000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/album_name"
                app:layout_constraintTop_toTopOf="@id/album_name"
                app:layout_constraintBottom_toBottomOf="@id/album_name"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/album_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Artist"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/album_name"
                app:layout_constraintTop_toBottomOf="@id/album_name"
                tools:ignore="HardcodedText" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_artist">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/album_action_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_share_24"
                    android:text="@string/action_share"
                    style="?attr/borderlessButtonStyle"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/song_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/album_container"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_song"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/album_action_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/desc_song_action_open"
        android:labelFor="@id/song_year"
        android:src="@drawable/ic_baseline_youtube_music_24"
        android:theme="@style/Theme.Albumify"
        android:tooltipText="@string/desc_song_action_play"
        app:backgroundTint="@color/youtube"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>